fixed scrolling direction/placement/spacing of button margin for browser interface and IO interface.

--- a/src/shared.css
+++ b/src/shared.css
@@ -26,7 +26,7 @@ nav {
   color: black;
   min-width: 10em;
   background-color: bisque;
-  order: 0;
+  order: 1;
 }
 
 nav a {
@@ -46,23 +46,56 @@ nav a:hover {
 
 #story-listing {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   border: 4px solid black;
   font-size: 15px;
   min-width: 10em;
-  max-width: 100%;
-  min-height: 200px;
+  max-height: 37.5em;
   order: -1;
 }
 
 #story-listing h1 {
-  text-decoration: underline;
+  display: flex;
+  align-self: center;
   font-size: 25px;
+  margin: 20px;
 }
+.story-listing-header {
+  display: flex;
+  justify-content: center;
+  border-bottom: 4px solid black;
+  margin-bottom: 15px;
+  min-height: 50px;
+  max-height: 50px;
+}
+
+.button-listing {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  order: 0;
+}
+
 .story-buttons {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  margin: auto;
+  margin-bottom: 15px;
+  display: block;
+}
+
+.storybutton {
+  max-width: 100px;
+  white-space: normal;
+  word-wrap: break-word;
+}
+
+.deletebutton {
+  position: relative;
+  left: 8px;
 }
 
 .editor {
@@ -75,7 +108,7 @@ nav a:hover {
   max-width: 100%;
   min-height: 200px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  order: 1;
+  order: 2;
 }
 
 #story-name {
@@ -90,7 +123,7 @@ nav a:hover {
   margin-bottom: 7px;
 }
 
-form {
+.form {
   display: inline-block;
   width: 200px;
   padding: 5px;
@@ -137,10 +170,6 @@ fieldset {
   nav {
     order: -1;
   }
-  #story-listing {
-    order: 3;
-    overflow-x: scroll;
-  }
   .editor {
     order: 1;
     width: 357px;
@@ -164,15 +193,44 @@ fieldset {
   }
   #story-listing {
     display: flex;
-    justify-content: center;
     border: 4px solid black;
     font-size: 15px;
     min-width: 6.5em;
     max-width: 100%;
     min-height: 200px;
+    order: 3;
+  }
+  .story-listing-header {
+    display: flex;
+    justify-content: center;
+    border-bottom: 4px solid black;
+    margin-bottom: 15px;
+    min-width: 357px;
   }
   #story-listing h1 {
-    text-decoration: underline;
+    display: flex;
+    align-self: center;
     font-size: 25px;
+    margin: 20px;
+  }
+  .button-listing {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    height: 100px;
+    order: 0;
+  }
+  .story-buttons {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+    margin-right: 20px;
+    display: block;
+  }
+  .storybutton {
+    max-width: 100px;
+    white-space: normal;
+    word-wrap: break-word;
   }
 }
